<resources>
    <string name="app_name">Diet Management</string>
    <string name="no_data">No data!</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_activity">Add Activity</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="nutrient_intake">Nutrient intake</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="fat">Fat</string>
    <string name="daily_goal">Daily goal</string>
    <string name="total">Total</string>
    <string name="remaining">Remaining</string>
    <string name="kcal">Kcal</string>
    <string name="consumed">Consumed</string>
    <string name="burned">Burned</string>
    <string name="chose_date">Chose date!</string>
    <string name="calories_balance">Calories balance</string>
    <string name="weight">Weight</string>
    <string name="recorded_value">Recorded value</string>
    <string name="amount">Amount</string>
    <string name="ingredient">Ingredient</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="product">Product</string>
    <string name="meal_name">Meal name</string>
    <string name="name_your_meal">Name your meal</string>
    <string name="ok">OK</string>
    <string name="carbs_">Carbs:</string>
    <string name="value">Value</string>
    <string name="fat_">Fat:</string>
    <string name="proteins_">Proteins:</string>
    <string name="height_">Height:</string>
    <string name="gender_">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="setup">Setup</string>
    <string name="discipline">Discipline</string>
    <string name="time_spent">Time spent</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
</resources>
