<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trzeszczu.dietmanagement2017.AddDisciplineActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="500dp">

        <TextView
            android:id="@+id/discipline_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@id/discipline_autoCompleteTextView"
            android:text="@string/discipline"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/discipline_autoCompleteTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/discipline_autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/time_editText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_spent"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/time_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hh_mm_ss"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discipline_autoCompleteTextView" />

        <Button
            android:id="@+id/finish_adding_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_editText" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
